@@ -43,7 +43,7 @@
             location="@CONNECTOR_PATH@/evolution-exchange-storage">
 
 	<oaf_attribute name="repo_ids" type="stringv">
-		<item value="IDL:GNOME/Evolution/DataServer/BookFactory:1.4"/>
+		<item value="IDL:GNOME/Evolution/DataServer/BookFactory:@EDS_BASE_VERSION@"/>
 		<item value="IDL:Bonobo/Unknown:1.0"/>
 	</oaf_attribute>
 
@@ -61,7 +61,7 @@
             location="@CONNECTOR_PATH@/evolution-exchange-storage">
 
 	<oaf_attribute name="repo_ids" type="stringv">
-		<item value="IDL:GNOME/Evolution/DataServer/CalFactory:1.4"/>
+		<item value="IDL:GNOME/Evolution/DataServer/CalFactory:@EDS_BASE_VERSION@"/>
 		<item value="IDL:Bonobo/Unknown:1.0"/>
 	</oaf_attribute>
 
